# GGJ2026

./: .gitignore  CMakeLists.txt
cmake/: module.cmake  raylib.cmake
module/core/: CMakeLists.txt
module/core/public/graphic3d/: mesh.hpp  meshInstance.hpp  shader.hpp
module/core/public/math/: vec.hpp
module/core/public/profiler/: profiler.hpp
module/core/public/reflection/: serialize.hpp  serializeXML.hpp
module/coreEditor/: CMakeLists.txt
module/coreEditor/private/: textureRenderer.cpp  windowManager.cpp
module/coreEditor/public/: textureRenderer.hpp  window.hpp  windowManager.hpp
module/coreEditor/public/reflection/: serializeGuiPreview.hpp
module/editor/: CMakeLists.txt  main.cpp
module/editor/private/: helper.cpp  level.cpp
module/editor/public/: actor.hpp  actorHelper.hpp  config.hpp  configHelper.hpp  configWindow.hpp  editorContext.hpp  gameContext.hpp  gameWindow.hpp  helper.hpp  level.hpp  profilerWindow.hpp  rlights.hpp  selectedWindow.hpp  world.hpp
module/editor/public/actors/: playerActor.hpp  reactiveActor.hpp  simpleAnimationActor.hpp  staticActor.hpp
module/editor/public/gameplaymode/: dialogMode.hpp  dialogMode2.hpp  gameOver.hpp  gameplayMode.hpp  playMode.hpp
module/editor/public/windows/: configWindow.hpp  editorWindow.hpp  gameWindow.hpp  tagsWindow.hpp
